--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,41 @@
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
 body{
+    
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(20, 16, 16);
 }
 
+#principal{
+    border: 1px solid #292F80;
+    background-color: #22A1D4;
+    width: 90%;
+    height: 220px;
+    margin: 0 auto;
+}
+.contenedor{
+    width: 90%;
+    background-color:#ffffff;
+    border: 1px solid #292F80;
+    margin: 0 auto;
+}
+nav{
+
+}
+
+#contenido{
+   border-top: 0px;
+   height: 350px;
+}
+h2{
+    margin: 0;
+}
 #menu-principal{
-    display: inline-block;
+    display: table;
+    margin: 0 auto;
 }
 
 i{
@@ -24,4 +56,9 @@ i{
 a{
     color:black;
     text-decoration: none;
+}
+
+footer{
+    height: 150px;
+    background-color: darkgreen !important;
 }
