--- a/css/style.css
+++ b/css/style.css
@@ -89,3 +89,35 @@ article>section>ul{
    width: 90%; 
    height: 300px;
 }
+
+#formulariocontacto{
+    margin: 0 auto;
+    width: 50%;
+    float: none;
+}
+
+.intexto{
+    width: 60%;
+    height: 30px;
+    font-size: 1.3rem;
+    border: solid 0.8px black;
+}
+
+.control{
+    width: 80%;
+    margin: 15px ;
+    display: flex;
+}
+
+label{
+    width: 100px;
+}
+
+.buttonform{
+    width: 100px;
+    height: 30px;
+    margin: 5px;
+    font-size: 1.1rem;
+    border: solid 1px black;
+    border-radius: 5px;
+}
